cmake_minimum_required(VERSION 3.10)
project(lecture_2homework)
include_directories(homework)
find_package(OpenCV REQUIRED)
find_package(fmt REQUIRED)
include_directories(homework)
add_executable(fmt_test homework/fmt_test.cpp)
add_executable(final homework/main.cpp homework/tools.cpp)
target_link_libraries(fmt_test fmt::fmt)
target_link_libraries(final fmt::fmt)
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(final ${OpenCV_LIBS})
